--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.8.2",
     "react-scripts": "^5.0.1",
     "styled-components": "^5.3.8",
+    "typescript": "^5.0.4",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19"
   },
